# PseudoCode

./: .gitignore  Definicion_gramatica.md  README.MD  builtins.h  cross_compilation.ini  grammar.owl  imgui.ini
include/generator/: generator.h  generators.h
include/platform-specifics/: README.md  colors.h  config.h  logger-gui.h  logger.h
include/platform-specifics/cli/: builtins.h
include/preprocessor/: preprocessor.h
include/pseudocode/: builtins.h
include/utils/: compile_code.h  utils.h
scripts/: descargar_compilador.ps1  ejecutar_fichero.sh  generate_parser.sh  package_build.sh
src/: meson.build
src/generator/: generator.c  generators.c
src/platform-specifics/cli/: config.c  logger.c  main_tui.c
src/platform-specifics/gui/: config.c  gui_opengl.cpp  logger.c
src/preprocessor/: preprocessor.c
src/pseudocode/: builtins.cpp
src/subprojects/: imgui.wrap
src/utils/: compile_code.c  utils.c
tests/: test-broken.txt  test-cosa.txt  test-funcion.txt  test.pseudo  test.txt  test2.txt  test4.txt  test_arrays.txt  test_do_while.txt  test_procedimiento.txt
